# ScholarLens

./: .env.example  .replit  LOCAL_SETUP.md  Project_Tracker.csv  TECHNICAL_REPORT.md  app.py  models.py  pyproject.toml  replit.md
attached_assets/: Pasted--env-1-C-Hasita-Masters-ScholarLens-ScholarLens-streamlit-run-app-py-server-port-5000-Colle-1764547696094_1764547696095.txt  Pasted--env-1-C-Hasita-Masters-ScholarLens-ScholarLens-streamlit-run-app-py-server-port-5000-Collect-1764547161163_1764547161164.txt  Pasted--env-1-C-Hasita-Masters-ScholarLens-ScholarLens-streamlit-run-app-py-server-port-5000-Collect-1764549663333_1764549663334.txt  Pasted--env-1-C-Hasita-Masters-ScholarLens-streamlit-run-app-py-server-port-5000-Collecting-usage-st-1764611298460_1764611298462.txt
scholarlens-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
scholarlens-frontend/src/: App.css  App.tsx  index.css  index.tsx  main.tsx
scholarlens-frontend/src/hooks/: useAnalytics.ts  useGraph.ts  usePapers.ts  useSearch.ts
scholarlens-frontend/src/pages/: Analytics.tsx  Authors.tsx  GraphPage.tsx  Home.tsx  PaperDetailPage.tsx  Papers.tsx  SearchFilters.tsx  SearchPage.tsx
scholarlens-frontend/src/services/: HttpClient.ts  api.ts  auth.ts  cache.ts
scholarlens-frontend/src/styles/: globals.css  themes.css  variables.css
utils/: __init__.py  analytics.py  arxiv_pubmed.py  export_utils.py  graph_builder.py  ner_extractor.py  openai_helper.py  pdf_processor.py  semantic_search.py  topic_modeling.py  trend_forecasting.py
(+25 files in other folders)
